# RexStl

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  _build.py  _generate.py  _rex.py  _setup.py  _test.py  build.py  ci.bat  clean.py  generate.py  main-solution.ninja  main-solution.sln  main-solution_asan.ninja  main-solution_coverage.ninja  main-solution_fuzzy.ninja  main-solution_ubsan.ninja  remove_all_intermediates.py  rex-standard-library.nsln  setup.py  test.py
_build/config/: required_libs.json  required_tools.json  settings.json
_build/scripts/: auto_test.py  build.py  code_analysis.py  fuzzy_test.py  generate.py  launch.py  setup.py  test.py  unit_test.py
_build/scripts/static_analysis/: static_analysis.py
_build/sharpmake/: main_solution_sharpmake.csproj  packages.config
_docs/: book.toml
_docs/book/: 404.html  index.html  print.html  searchindex.js  searchindex.json
_docs/src/: SUMMARY.md
_docs/stl_headers/: algorithm.json  any.json  array.json  atomic.json  bit_set.json  charconv.json  chrono.json  condition_variable.json  cstring.json  ctype.json  deque.json  exception.json  execution.json  fenv.json  filesystem.json  forward_list.json  fstream.json  functional.json  future.json  gen.py  inttypes.json  iomanip.json  ios.json  iostream.json  istream.json  iterator.json  list.json  map.json  math.json  memory.json  mutex.json  new.json  numeric.json  optional.json  ostream.json  queue.json  random.json  ratio.json  set.json  shared_mutex.json  (+17 more)
_docs/vscode_snippets/: rtl-complex-1.code-snippets  rtl-complex-logn.code-snippets  rtl-complex-n.code-snippets  rtl-complex-nlogn.code-snippets  rtl-complex-nsq.code-snippets  rtl-copyright.code-snippets  rtl-diff-std.code-snippets  rtl-no-std.code-snippets
cmake/: RexStd.cmake  RexStdExe.cmake  RexStdExtra.cmake  RexStdTest.cmake  directories.cmake  precompiled_header.cmake  utilities.cmake
docs/: book.toml
docs/src/: SUMMARY.md  coding_practices.md  comment_tags.md  debug_vs_retail.md  glossary.md  introduction.md  memory.md  other_cpp_features.md  rsl_vs_std_notes.md
docs/vscode_snippets/: rtl-complex-1.code-snippets  rtl-complex-logn.code-snippets  rtl-complex-n.code-snippets  rtl-complex-nlogn.code-snippets  rtl-complex-nsq.code-snippets  rtl-copyright.code-snippets  rtl-diff-std.code-snippets  rtl-no-std.code-snippets
scripts/: add_new_check.py  create_project.py  diagnostics.py  generate.py  repository_directories.py  run_clang_tools.py  update_submodule.py
snippets/: rsl-copyright.code-snippets
snippets/Code/: rsl-comment.code-snippets  rsl-copyright.code-snippets  rsl-diff-std.code-snippets  rsl-no-std.code-snippets  rsl-todo.code-snippets
source/: .clang-tidy  .clang-tidy_first_pass  .clang-tidy_second_pass  CMakeLists.txt  post_build.py
source/RexStd/: rexstd.sharpmake.cs
source/RexStdExe/: rexstdexe.sharpmake.cs
source/rex_std/: rexstd.sharpmake.cs
source/rex_std_exe/: rexstdexe.sharpmake.cs
source/rex_std_extra/: rexstdextra.sharpmake.cs
tests/: .clang-format  .clang-tidy_first_pass  .clang-tidy_second_pass  iwyu.imp
tests/RexStdFuzzy/: rexstdfuzzy.sharpmake.cs
tests/RexStdTest/: rexstdtest.sharpmake.cs
tests/rex_std_fuzzy/: rexstdfuzzy.sharpmake.cs
tests/rex_std_test/: rexstdtest.sharpmake.cs
(+2513 files in other folders)
